# zkevm-circuits

./: .gitignore  Cargo.toml  run_opcode_tests.sh
bus-mapping/: Cargo.toml
bus-mapping/src/: circuit_input_builder.rs  error.rs  lib.rs  mock.rs  operation.rs  precompile.rs  state_db.rs  util.rs
bus-mapping/src/circuit_input_builder/: block.rs  call.rs  execution.rs  input_state_ref.rs  tracer_tests.rs  transaction.rs
bus-mapping/src/evm/: opcodes.rs
bus-mapping/src/evm/opcodes/: balance.rs  calldatacopy.rs  callop.rs  codecopy.rs  create.rs  error_depth.rs  error_invalid_creation_code.rs  error_invalid_jump.rs  error_oog_call.rs  extcodecopy.rs  extcodehash.rs  extcodesize.rs  return_revert.rs  sha3.rs
bus-mapping/src/operation/: container.rs
circuit-benchmarks/: Cargo.toml
circuit-benchmarks/src/: lib.rs  pi_circuit.rs  tx_circuit.rs
eth-types/: Cargo.toml
eth-types/src/: geth_types.rs  lib.rs  sign_types.rs
eth-types/src/evm_types/: memory.rs  opcode_ids.rs
gadgets/: Cargo.toml
gadgets/src/: batched_is_zero.rs  binary_number.rs  comparator.rs  evm_word.rs  is_equal.rs  is_zero.rs  less_than.rs  monotone.rs  mul_add.rs  util.rs
integration-tests/: Cargo.toml
integration-tests/src/: integration_test_circuits.rs
integration-tests/tests/: circuits.rs
keccak256/: Cargo.toml
keccak256/src/: gate_helpers.rs
mock/src/: transaction.rs
testool/: Cargo.toml
testool/src/statetest/: executor.rs  spec.rs
zkevm-circuits/: Cargo.toml  res.txt  res2.txt  res3.txt
zkevm-circuits/src/: copy_circuit.rs  evm_circuit.rs  exp_circuit.rs  lib.rs  mpt_circuit.rs  pi_circuit.rs  poseidon_circuit.rs  rlp_circuit.rs  rlp_circuit_fsm.rs  state_circuit.rs  super_circuit.rs  table.rs  tx_circuit.rs  util.rs  witness.rs
zkevm-circuits/src/bytecode_circuit/: bytecode_unroller.rs  circuit.rs  dev.rs
zkevm-circuits/src/bytecode_circuit/bytecode_unroller/: to_poseidon_hash.rs
zkevm-circuits/src/bytecode_circuit/circuit/: to_poseidon_hash.rs
zkevm-circuits/src/evm_circuit/: execution.rs  param.rs  step.rs  table.rs  util.rs
zkevm-circuits/src/evm_circuit/execution/: add_sub.rs  balance.rs  begin_tx.rs  calldatacopy.rs  callop.rs  comparator.rs  create.rs  end_block.rs  end_tx.rs  error_code_store.rs  error_depth.rs  error_invalid_creation_code.rs  error_invalid_jump.rs  error_oog_account_access.rs  error_oog_call.rs  error_oog_log.rs  error_oog_static_memory.rs  exp.rs  extcodecopy.rs  extcodehash.rs  extcodesize.rs  jump.rs  jumpi.rs  logs.rs  memory.rs  push.rs  return_revert.rs  returndatacopy.rs  (+4 more)
zkevm-circuits/src/keccak_circuit/: keccak_packed_multi.rs  test.rs  util.rs
zkevm-circuits/src/state_circuit/: constraint_builder.rs  lexicographic_ordering.rs  test.rs
zkevm-circuits/src/tx_circuit/: config.rs  param.rs  sign_verify.rs
zkevm-circuits/src/witness/: block.rs  bytecode.rs  mpt.rs  rlp_fsm.rs  rw.rs  step.rs  tx.rs
zktrie/: Cargo.toml
zktrie/src/: lib.rs  state.rs
zktrie/src/state/: builder.rs  witness.rs
(+28 files in other folders)
