[workspace]
members = [
    "zkevm-circuits",
    "bus-mapping",
    "geth-utils",
    "keccak256",
    "zktrie",
    "gadgets",
    "integration-tests",
    "circuit-benchmarks",
    "eth-types",
    "external-tracer",
    "mock",
    "testool"
]

[patch."https://github.com/privacy-scaling-explorations/halo2.git"]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", branch = "scroll-dev-0220"  }
[patch."https://github.com/privacy-scaling-explorations/poseidon.git"]
poseidon = { git = "https://github.com/scroll-tech/poseidon.git", branch = "scroll-dev-0220" }

[patch."https://github.com/privacy-scaling-explorations/halo2wrong.git"]
maingate = { git = "https://github.com/scroll-tech/halo2wrong", branch = "halo2-ecc-snark-verifier-0323" }

# Definition of benchmarks profile to use.
[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
rpath = false
lto = "thin"
incremental = false
codegen-units = 1

[profile.release]
opt-level = 3
debug = false
debug-assertions = true
overflow-checks = true
rpath = false
lto = "thin"
incremental = false
